--- a/package.json
+++ b/package.json
@@ -24,19 +24,23 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "start":"node Gruntfile.js"
+    "build": "grunt uglify",
+    "start": "node server.js"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-jshint": "~0.6.0",
     "csv": "~0.3.2",
-    "http-server": "~0.5.3",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-uglify": "0.4.1",
+    "http-server": "~0.5.3"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "grunt-cli": "^1.4.3"
+  }
 }
