--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "0.4.1",
+    "grunt-surge": "^0.7.0",
     "http-server": "~0.5.3"
   },
   "keywords": [],
   "dependencies": {
+    "git": "^0.1.5",
     "grunt-cli": "^1.4.3"
   }
 }
