--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "build": "grunt uglify",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "devDependencies": {
     "csv": "~0.3.2",
